--- a/01 IoC 컨테이너/05 빈 스코프.md
+++ b/01 IoC 컨테이너/05 빈 스코프.md
@@ -1,6 +1,5 @@
 빈 스코프
 =====================  
-# 📗 빈 스코프란?  
 **스프링 빈 스코프의 기본 전략은 `싱글톤`이다.**     
 하지만 이외에도 다양한 전략들도 존재한다.      
      
@@ -35,7 +34,7 @@ PrototypeBean HelloBean() {
 }
 ```
 
-## 📖 프로토타입 스코프    
+# 📗 프로토타입 스코프    
 `프로토타입 스코프`는 **빈을 요청할 때마다 매번 새롭게 빈을 생성하는 전략이다.**                
                        
 또한, 프로토타입 빈은 스프링 컨테이너가 **생성**과 **의존관계 주입** 그리고 **초기화** 까지만 관여하고, 더는 관리하지 않는다.          
@@ -85,7 +84,7 @@ public class PrototypeTest {
 * 그래서 프로토타입 빈은 프로토타입 빈을 조회한 클라이언트가 관리해야 한다.      
 * 종료 메서드에 대한 호출도 클라이언트가 직접 해야한다.    
       
-### 📄 프로토타입과 싱글톤 빈과 함께 사용시 문제점        
+## 📖 프로토타입과 싱글톤 빈과 함께 사용시 문제점        
 `프로토 타입 스코프 빈`내에 `싱글톤 스코프 빈`이 존재한다면 당연히, 매번 생성되어도 싱글톤이 주입될 것이다.   
 그렇다면, **`싱글톤 스코프 빈`내에 `프로토타입 스코프 빈`이 존재한다면 어떻게 될까? 🤔**                 
       
@@ -151,7 +150,7 @@ PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f
 두 클래스의 경우는 두 빈 모두 싱글턴이지만,               
 주입되는 빈은 프로토타입 빈이므로 각각의 의존 관계 주입에 새로운 객체로 생성되어 주입한다.           
         
-### 📄 Dependecy Lookup을 위한 Provider          
+## 📖 Dependecy Lookup을 위한 Provider          
 싱글톤 빈과 프로토타입 빈을 함께 사용할 때,            
 **어떻게 하면 사용할 때 마다 항상 새로운 프로토타입 빈을 생성할 수 있을까? 🤔**         
           
@@ -171,529 +170,25 @@ PrototypeBean.init hello.core.scope.SingletonWithPrototypeTest1$PrototypeBean@3f
 가장 간단한 방법으로는 `스프링 컨테이너 빈`을 의존 관계 주입받아            
 `스프링 컨테이너 빈`의 `getBean()`을 활용하여 직접 프로토타입 빈을 꺼내오면 된다.              
 이렇듯, **직접 필요한 의존 관계를 찾는 것을 Dependency Lookup (DL) 의존관계 조회(탐색)** 이라 한다.       
-             
-그런데 이렇게 스프링의 애플리케이션 컨텍스트 전체를 주입받게 되면,        
-`스프링 컨테이너`에 종속적인 코드가 되고, 단위 테스트도 어려워진다.       
-          
-지금 필요한 기능은 지정한 프로토타입 빈을 컨테이너에서 대신 찾아주는 기능으로     
-딱! DL 정도의 기능만 제공하는 무언가가 있으면 된다.     
-   
-## ObjectFactory, ObjectProvider   
-스프링 컨테이너에서 특정한 빈을 찾아올 수 있는 `ObjectProvider`빈이 존재한다.     
-  
+                  
+그런데 `ApplicationContext` 전체를 주입받게 되면, 너무 많은 기능을 준비하고 단위 테스트도 어려워진다.       
+이럴때는 `DL` 기능만 수행해주는 `Provider` 클래스를 이용하면된다.   
+        
+## 📖 프로토타입 빈을 언제 사용할까?🤔**        
+사실, 대부분 싱글톤으로 해결이 가능하기에 **프로토타입 빈을 직접적으로 사용하는 일은 매우 드물다.**            
+특정 케이스로, 순환 참조 관계가 발생했을 때(A가 B를 참조해도 B가 A를 나중에 참조할 때)사용하지만                
+이전에 언급했듯이 이럴경우 차라리 설계를 다시한다.    
+                 
+# 📘 웹 스코프
 ```java
-    @Autowired
-    private ObjectProvider<PrototypeBean> prototypeBeanProvider;
-
-    public int logic() {
-        PrototypeBean prototypeBean = prototypeBeanProvider.getObject();
-        prototypeBean.addCount();
-        int count = prototypeBean.getCount();
-        return count;
-    }
-```      
-   
-`prototypeBeanProvider.getObject()`은 스프링 컨테이너를 통해 해당 빈을 찾아서 반환한다. (DL)     
-`ObjectProvider` 의 `getObject()` 를 호출하면 내부에서는 스프링이 제공하는 기능을 사용하지만,          
-기능이 단순하므로 단위테스트를 만들거나 mock 코드를 만들기도 훨씬 쉬워진다.       
-ObjectProvider 는 지금 딱 필요한 DL 정도의 기능만 제공하고 있다.      
-      
-참고로, `ObjectProvider` 등장 이전에는 `ObjectFactory`이라는게 있었다.       
-`ObjectFactory`는 진짜 오로지 순수 DL 기능만을 제공해준다.   
-`ObjectProvider`는 DL 기능 외에도 
-   
-**특징**   
-ObjectFactory: 기능이 단순, 별도의 라이브러리 필요 없음, 스프링에 의존   
-ObjectProvider: ObjectFactory 상속, 옵션, 스트림 처리등 편의 기능이 많고, 별도의 라이브러리 필요없음, 스프링에 의존    
-   
-앞서, `ObjectProvider` 의 `getObject()`는 스프링이 제공하는 기능이지만, 단위테스트가 된다고 했다.         
-하지만, 결국에는 스프링에 의존된 상태이므로 순수 자바로만 이어진 단위 테스트를 진행하기는 힘들 것이다.        
-             
-## JSR-330 Provider    
-순수 자바 라이브러리 중 하나인 `javax`에서도 `Provider`를 제공한다.            
-정확히 말하면, `javax.inject:javax.inject:1` 라이브러리를 `gradle`에 추가해야 하지만,          
-`javax.inject.Provider` 라는 `JSR-330` **자바 표준**을 사용하는 방법이다.         
-
-```java
-
-    @Scope("singleton")
-    static class ClientBean {
-
-        private final Provider<PrototypeBean> objectProvider;
-
-        @Autowired
-        public ClientBean(Provider<PrototypeBean> objectProvider) {
-            this.objectProvider = objectProvider;
-        }
-
-        public int logic() {
-            PrototypeBean prototypeBean = objectProvider.get();
-            prototypeBean.addCount();
-            return prototypeBean.getCount();
-        }
-
-    }
-```
-`provider.get()`은 내부에서는 컨테이너에서 해당 빈을 찾아서 반환한다. (DL)          
-**자바 표준**이고, 기능이 단순하므로 단위테스트를 만들거나 mock 코드를 만들기는 훨씬 쉬워진다.        
-Provider 는 지금 딱 필요한 `DL` 정도의 기능만 제공한다.          
-          
-**그렇다면 왜? `javax.inject.Provider`를 사용할까? 🤔**        
-앞선 `ObjectProvider`는 스프링에서 제공되는, 스프링에 의존적인 `Proivider`였다.      
-하지만, `javax.inject.Provider`는 자바 표준이기에    
-스프링이 아닌 다른 프레임워크의 컨테이너의 `DL`을 지원할 수 있다는 장점이 있다.  
-      
-**특징**   
-* `get()` 메서드 하나로 기능이 매우 단순하다.     
-* 별도의 라이브러리가 필요하다.    
-* 자바 표준이므로 스프링이 아닌 다른 컨테이너에서도 사용할 수 있다.    
-
-      
-**프로토타입 빈을 언제 사용할까?🤔**        
-사용할 때 마다 새로운 객체가 필요한 경우에 사용된다.            
-그런데 실무에서 웹 애플리케이션을 개발해보면,           
-싱글톤 빈으로 대부분의 문제를 해결할 수 있기 때문에 프로토타입 빈을 직접적으로 사용하는 일은 매우 드물다.        
-`ObjectProvider , JSR330 Provider` 등은 프로토타입 뿐만 아니라        
-DL이 필요한 경우, 즉 어떤 빈이든지간에 언제든지 DL 작업을 수행할 수 있다.          
-특정 케이스로 말하자면,         
-지연에서 가져오거나 옵셔널하게 가져올 때,       
-순환 의존 관계가 발생했을 때(A가 B를 참조해도 B가 A를 나중에 참조할 때)이다.          
-          
-**참고**         
-* 스프링이 제공하는 메서드에 `@Lookup` 애노테이션을 사용하는 방법도 있지만,        
-  이전 방법들로 충분하고, 고려해야할 내용도 많아서 생략하겠다.       
-* 자바 표준인 JSR-330 Provider를 사용할 것인지, 아니면 스프링이 제공하는 ObjectProvider를 사용할 것인지 고민이 될 것이다.        
-  ObjectProvider는 DL을 위한 편의 기능을 많이 제공해주고 스프링 외에 별도의 의존관계 추가가 필요 없기 때문에 편리하다.         
-  만약 코드를 스프링이 아닌 다른 컨테이너에서도 사용할 수 있어야 한다면 JSR-330 Provider를 사용해야한다.        
-  (하지만, 그럴일은 거의 없다.)               
-* 스프링을 사용하다 보면 이 기능 뿐만 아니라 다른 기능들도 자바 표준과 스프링이 제공하는 기능이 겹칠때가 많이 있다.         
-  대부분 스프링이 더 다양하고 편리한 기능을 제공해주기 때문에,     
-  특별히 다른 컨테이너를 사용할 일이 없다면, 스프링이 제공하는 기능을 사용하면 된다.           
-
-# 웹 스코프
-웹 스코프는 빈 스코프 중에서 웹 환경에서만 동작을 한다.     
-그렇기에 프로토타입과는 다르게 스프링이 해당 스코프의 종료시점까지 관리한다는 특징이 있다.   
-     
-**웹 스코프 종류**   
+@Scope(value = "스코프")
+```   
+웹 스코프는 **빈 스코프 중에서 웹 환경에서만 동작을 한다.(안드로이드, 다른 서버 불가)**        
+그렇기에 프로토타입과는 다르게 스프링이 해당 스코프의 종료 시점까지 관리한다는 특징이 있다.      
+        
+**웹 스코프 종류**     
 * **request:** HTTP 요청 하나가 들어오고 나갈 때까지 유지되며, HTTP 요청마다 별도의 빈 인스턴스가 생성되고 관리된다.   
 * **session:** HTTP Session과 동일한 생명주기를 가지는 스코프   
 * **application:** 서블릿 컨텍스트(ServletContext)와 동일한 생명주기를 가지는 스코프     
 * **websocket:** 웹 소켓과 동일한 생명주기를 가지는 스코프  
-   
-# Request 스코프 
-`Request 스코프`에 대해서 간단히 숙지하고 있으므로 코드를 통해 알아보자        
-   
-   
-**build.gradle**
-```gradle   
-plugins {
-    id 'org.springframework.boot' version '2.4.4'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-    id 'java'
-}
-
-group = 'hello'
-version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
-
-repositories {
-    mavenCentral()
-}
-
-configurations {
-    compileJava {
-        extendsFrom annotationProcessor
-    }
-}
-
-dependencies {
-
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.projectlombok:lombok'
-    implementation 'javax.inject:javax.inject:1'
-
-    compileOnly'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
-    testCompileOnly'org.projectlombok:lombok'
-    testAnnotationProcessor 'org.projectlombok:lombok'
-
-    implementation 'org.springframework.boot:spring-boot-starter'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
-
-test {
-    useJUnitPlatform()
-}
-```   
-`spring-boot-starter-web` 라이브러리를 추가하면서    
-스프링과 내장 톰켓 서버를 함께 실행시키도록 만들었다.     
-        
-**참고로,**      
-스프링 부트는 '웹 라이브러리'가 없으면        
-`AnnotationConfigApplicationContext`을 기반으로 애플리케이션을 구동한다.     
-반면에, '웹 라이브러리'가 존재한다면            
-웹과 관련된 추가 설정과 환경들이 필요하기에               
-`AnnotationConfigServletWebServerApplicationContext`를 기반으로 애플리케이션을 구동한다.        
-     
-그리고 만약, 기존에 8080포트를 사용하고 있다면 프로퍼티를 통해 서버 포트를 변경시킬 수 있다.    
-**main/resources/application.properties**
-```properties
-server.port=9090
-```
-       
-이제 우리는 `@Scope(value = "request")`를 사용할 수 있다.          
-단, `request 스코프`를 사용하기 이전에 **왜? 그리고 언제? 사용하는지 알아보자 🤔**     
       
-`request 스코프`를 사용하는 대표적인 예로 **로그**가 있다.       
-여러 HTTP 요청이 동시에 오면 정확히 어떤 요청이 남긴 로그인지 구분하기 어렵다.       
-`request 스코프`는 이럴때 사용하기 딱 좋다.       
-            
-아래와 같이 로그가 남도록 `request 스코프`를 활용해서 추가 기능을 개발해보자.        
-```
-[d06b992f...] request scope bean create
-[d06b992f...][http://localhost:8080/log-demo] controller test[d06b992f...][http://localhost:8080/log-demo] service id = testId
-[d06b992f...] request scope bean close
-```
-* 기대하는 공통 포멧: `[UUID][requestURL] {message}`   
-* UUID를 사용해서 HTTP 요청을 구분하자.        
-* requestURL 정보도 추가로 넣어서 어떤 URL을 요청해서 남은 로그인지 확인하자.     
-     
-**MyLogger**
-```java
-package hello.core.common;
-
-import org.springframework.context.annotation.Scope;
-import org.springframework.stereotype.Component;
-
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
-import java.util.UUID;
-
-@Scope(value = "request")
-@Component
-public class MyLogger {
-
-    private String uuid;
-    private String requestURL;
-
-    public void setRequestURL(String requestURL) {
-        this.requestURL = requestURL;
-    }
-
-    public void log(String message) {
-        System.out.println("[" + uuid + "]" + "[" + requestURL + "]" + message);
-    }
-
-    @PostConstruct
-    public void init() {
-        uuid = UUID.randomUUID().toString();
-        System.out.println("[" + uuid + "] request scope bean create:" + this);
-    }
-
-    @PreDestroy
-    public void close() {
-        System.out.println("[" + uuid + "] request scope bean create:" + this);
-    }
-}
-```
-웹 애플리케이션의 사용자의 request시 로그를 출력하기 위한 MyLogger 클래스이다.
-`@Scope(value = "request")`를 사용해서 `request 스코프`로 지정했다.    
-이제 이 빈은 `HTTP 요청 당 하나씩 생성`되고, `HTTP 요청이 끝나는 시점에 소멸`된다.    
-      
-이 빈이 생성되는 시점에 자동으로 `@PostConstruct` 초기화 메서드를 사용해서 `uuid`를 생성해서 저장해둔다.     
-이 빈은 HTTP 요청 당 하나씩 생성되므로, uuid를 저장해두면 다른 HTTP 요청과 구분할 수 있다.    
-이 빈이 소멸되는 시점에 `@PreDestroy`를 사용해서 종료 메시지를 남긴다.       
-`requestURL`은 이 빈이 생성되는 시점에는 알 수 없으므로, 외부에서 setter로 입력 받는다.      
-    
-**LogDemoController**
-```java
-package hello.core.web;
-
-import hello.core.common.MyLogger;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseBody;
-
-import javax.servlet.http.HttpServletRequest;
-
-@RequiredArgsConstructor
-@Controller
-public class LogDemoController {
-
-    private final LogDemoService logDemoService;
-    private final MyLogger myLogger;
-
-    @RequestMapping("log-demo")
-    @ResponseBody
-    public String logDemo(HttpServletRequest request) {
-        String requestUrl = request.getRequestURI().toString();
-        myLogger.setRequestURL(requestUrl);
-
-        myLogger.log("Controller Test");
-        logDemoService.logic("testId");
-        return "OK";
-    }
-
-}
-```
-로거가 잘 작동하는지 확인하는 테스트용 컨트롤러다.    
-`HttpServletRequest`를 통해서 요청 `URL`을 받았다.  
-(requestURL 값 `http://localhost:8080/log-demo`)  
-이렇게 받은 requestURL 값을 myLogger에 저장해둔다.      
-myLogger는 HTTP 요청 당 각각 구분되므로 다른 HTTP 요청 때문에 값이 섞이는 걱정은 하지 않아도 된다.     
-컨트롤러에서 controller test라는 로그를 남긴다.       
-     
-**참고로,**      
-`requestURL`을 `MyLogger`에 저장하는 부분은 컨트롤러 보다는        
-공통 처리가 가능한 스프링 인터셉터나 서블릿 필터 같은 곳을 활용하는 것이 좋다.         
-스프링 웹에 익숙하다면 인터셉터를 사용해서 구현해보자       
-     
-**LogDemoService**
-```java
-package hello.core.web;
-
-import hello.core.common.MyLogger;
-import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;
-
-@RequiredArgsConstructor
-@Service
-public class LogDemoService {
-
-    private final MyLogger myLogger;
-
-    public void logic(String id) {
-        myLogger.log("service id = " + id);
-    }
-}
-```
-비즈니스 로직이 있는 서비스 계층에서도 로그를 출력해보자.      
-여기서 중요한점이 있다.       
-`request 스코프`를 사용하지 않고 파라미터로 이 모든 정보를 서비스 계층에 넘긴다면, 파라미터가 많아서 지저분해진다.         
-더 문제는 `requestURL` 같은 웹과 관련된 정보가 웹과 관련없는 서비스 계층까지 넘어가게 된다.       
-     
-**웹과 관련된 부분은 컨트롤러까지만 사용해야 한다.**         
-서비스 계층은 웹 기술에 종속되지 않고, 가급적 순수하게 유지하는 것이 유지보수 관점에서 좋다.     
-request scope의 MyLogger 덕분에 이런 부분을 파라미터로 넘기지 않고,      
-MyLogger의 멤버변수에 저장해서 코드와 계층을 깔끔하게 유지할 수 있다.    
-               
-자 이제, 우리가 생각한대로 코드를 구현을 해보았으니 실행해보자    
-```java
-Error creating bean with name 'myLogger': Scope 'request' is not active for the 
-current thread; consider defining a scoped proxy for this bean if you intend to 
-refer to it from a singleton;
-```
-하지만, 직접 실행을 돌려서 확인하고자 하면 에러가 발생한다.   
-**컴파일 문제도 없고, 논리 흐름도 맞는 것 같은데 왜 에러가 발생하지? 🤔**    
-아이러니하게도 에러가 발생한 이유는 **requset 스코프** 때문이다.   
-      
-**requset 스코프**는 클라이언트의 요청이 있어야 생성되는 빈이다.       
-반면에, `LogDemoController`와 `LogDemoService`는 애플리케이션 시작시 생성되는 빈이다.     
-즉 생성 시점의 불일치로 인하여 빈이 주입 되지 못하기에 발생하는 에러이다.     
-   
-아주 난감한 에러이다.     
-`requset 스코프`를 사용하고자 하지만, `requset 스코프` 때문에 에러가 발생하니 말이다.     
-그렇다면 **어떻게 해야 이 문제를 해결할까? 🤔**        
-
-해결 방안은 2가지가 있으므로 아래를 참고 바란다.   
- 
-1.  `Provider`기능 사용
-2.  `Proxy` 기능 사용 
-  
-# 스코프와 Provider
-`request 스코프` 문제를 해결하기 위한 해결방안 중 하나로 `Provider`를 사용하면 된다.      
-이전 코드를 `ObjectProvider` 형식으로 변형해보겠다.    
-   
-**LogDemoController**
-```java
-package hello.core.web;
-
-import hello.core.common.MyLogger;
-import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.ObjectProvider;
-import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseBody;
-
-import javax.servlet.http.HttpServletRequest;
-
-@RequiredArgsConstructor
-@Controller
-public class LogDemoController {
-
-    private final LogDemoService logDemoService;
-    private final ObjectProvider<MyLogger> myLoggerProvider;
-
-    @RequestMapping("log-demo")
-    @ResponseBody
-    public String logDemo(HttpServletRequest request) {
-        String requestUrl = request.getRequestURI().toString();
-        MyLogger myLogger = myLoggerProvider.getObject();
-        myLogger.setRequestURL(requestUrl);
-
-        myLogger.log("Controller Test");
-        logDemoService.logic("testId");
-        return "OK";
-    }
-
-}
-```
-**LogDemoService**
-```java
-package hello.core.web;
-
-import hello.core.common.MyLogger;
-import lombok.RequiredArgsConstructor;
-import org.springframework.beans.factory.ObjectProvider;
-import org.springframework.stereotype.Service;
-
-@RequiredArgsConstructor
-@Service
-public class LogDemoService {
-
-    private final ObjectProvider<MyLogger> myLoggerProvider;
-
-    public void logic(String id) {
-        MyLogger myLogger = myLoggerProvider.getObject();
-        myLogger.log("service id = " + id);
-    }
-}
-```   
-* `ObjectProvider` 사용함으로써       
-`ObjectProvider.getObject()` 를 호출하는 시점까지 request scope 빈의 생성을 지연할 수 있다.    
-* `ObjectProvider.getObject()`를 호출하시는 시점에는   
-  HTTP 요청이 진행중이므로 `request scope` 빈의 생성이 정상 처리된다.
-* `ObjectProvider.getObject()` 를 LogDemoController , LogDemoService 에서 각각 한번씩 따로 호출해도    
-  같은 HTTP 요청이면 같은 스프링 빈이 반환된다!    
-
-# 스코프와 프록시  
-프록시를 이용한다는 것은 프록시 패턴을 이용하는 방법을 의미한다.  
-프록시 패턴에 대해서 더 자세히 알고 싶다면, [필자가 정리한 내용](https://github.com/kwj1270/TIL_DESIGN_PATTERN/blob/3d67e85cee35c130a6763c4c81c3f3a1666be1b3/Proxy%20Pattern.md)을 참고바란다.     
-   
-우선 코드를 통해 프록시 방법을 알아보자.  
-
-```java
-package hello.core.common;
-
-import org.springframework.context.annotation.Scope;
-import org.springframework.context.annotation.ScopedProxyMode;
-import org.springframework.stereotype.Component;
-
-import javax.annotation.PostConstruct;
-import javax.annotation.PreDestroy;
-import java.util.UUID;
-
-@Scope(value = "request", proxyMode = ScopedProxyMode.TARGET_CLASS)
-@Component
-public class MyLogger {
-
-    private String uuid;
-    private String requestURL;
-
-    public void setRequestURL(String requestURL) {
-        this.requestURL = requestURL;
-    }
-
-    public void log(String message) {
-        System.out.println("[" + uuid + "]" + "[" + requestURL + "]" + message);
-    }
-
-    @PostConstruct
-    public void init() {
-        uuid = UUID.randomUUID().toString();
-        System.out.println("[" + uuid + "] request scope bean create:" + this);
-    }
-
-    @PreDestroy
-    public void close() {
-        System.out.println("[" + uuid + "] request scope bean create:" + this);
-    }
-}
-```
-참고로, `Controller`와 `Serivce`는 `ObjectProvider`가 아닌 `MyLogger`를 사용하도록 바꿔야한다.     
-   
-```java
-@Scope(value = "request", proxyMode = ScopedProxyMode.TARGET_CLASS)
-@Component
-public class MyLogger {
-```    
-`@Scope`에 **proxyMode 속성값을 추가시켜주었다.**        
-`proxyMode 속성 값`은 해당하는 빈을 프록시로 감싸줄 것인지에 대한 기능이다.         
-스프링에서는 기본적으로 `CGLIB 프록시 패턴` 방법을 제공해주고 있다.           
-   
-`proxyMode`에 적용되는 타입으로 **ScopedProxyMode** 열거형을 사용하고 있다.      
-     
-**ScopedProxyMode**     
-* **DEFAULT :** No와 동일하며 기본으로 설정되어있는 값이다.       
-* **NO :** 아무런 프록시 작업을 하지 않는 상태이다.    
-* **INTEFACE :** 타켓이 인터페이스일 경우 사용하는 속성 값이다.    
-* **TARGET_CLASS :** 타겟이 클래스일 경우 사용하는 속성 값이다.   
-      
-**그럼 프록시 방법을 통해 얻어지는 이점은 무엇일까? 아니 왜 동작하는 것일까? 🤔**    
-바로, `MyLogger`의 가짜 프록시 클래스를 만들어두고              
-HTTP request와 상관 없이 **프록시 클래스를 다른 빈에 미리 주입해 둘 수 있다.**    
-      
-우선, 이를 확인하기 위해 아래와 같은 코드를 `Controller`나 `Service`에 입력하고 결과를 확인한다.   
-```java
-System.out.println("myLogger = " + myLogger.getClass());
-```
-```java
-myLogger = class hello.core.common.MyLogger$$EnhancerBySpringCGLIB$$b68b726d
-``` 
-우선, 결과를 통해 확실히 프록시 빈 객체가 생성되어 의존 관계를 맺고 있다.          
-정확히 말하면, **CGLIB라는 라이브러리로 내 클래스를 상속 받은 가짜 프록시 객체를 만들어서 주입한다.**  
-     
-`@Scope` 의 `proxyMode = ScopedProxyMode.TARGET_CLASS` 를 설정하면       
-스프링 컨테이너는 `CGLIB`라는 바이트코드를 조작하는 라이브러리를 사용해서,            
-MyLogger를 상속받은 가짜 프록시 객체를 생성한다.         
-결과를 확인해보면 우리가 등록한 순수한 `MyLogger` 클래스가 아니라         
-`MyLogger$$EnhancerBySpringCGLIB` 이라는 클래스로 만들어진 객체가 대신 등록된 것을 확인할 수 있다.       
-그리고 스프링 컨테이너에 `myLogger`라는 이름으로 진짜 대신에 이 가짜 프록시 객체를 등록한다.         
-`ac.getBean("myLogger", MyLogger.class)`로 조회해도 프록시 객체가 조회되는 것을 확인할 수 있다.     
-그래서 의존관계 주입도 이 가짜 프록시 객체가 주입된다.        
-         
-의존 관계 설정을 맺을 때 중요한 것은 해당 빈이 존재해야 한다는 것이다.       
-이전에는 `request 스코프` 였기 때문에 이를 의존 관계 주입받는 객체들은 에러가 발생했다.     
-하지만, 프록시 설정을 해두면 `MyLogger`의 가짜 프록시가 미리 생성되어 있기에  
-의존 관계 주입시 에러가 발생하지 않느다.   
-        
-그리고 동일한 타입의 참조 변수로 참조가 가능한 이유는      
-프록시 객체는 원본 객체를 **상속**받기 때문에 **다형성**으로 인한 참조가 가능했던 것이다.       
-     
-**가짜 프록시 객체는 요청이 오면 그때 내부에서 진짜 빈을 요청하는 위임 로직이 들어있다.**      
-* 가짜 프록시 객체는 내부에 진짜 myLogger를 참조하고 있다.        
-* 클라이언트가 `myLogger.logic()` 을 호출하면 사실은 가짜 프록시 객체의 메서드를 호출한 것이다.   
-* 가짜 프록시 객체는 request 스코프의 진짜 myLogger.logic() 를 호출한다.   
-* 가짜 프록시 객체는 원본 클래스를 상속 받아서 만들어졌기 때문에      
-  이 객체를 사용하는 클라이언트 입장에서는 사실 원본인지 아닌지도 모르게, 동일하게 사용할 수 있다(다형성)    
-      
-**동작 정리**    
-* `CGLIB`라는 라이브러리로 내 클래스를 상속 받은 가짜 프록시 객체를 만들어서 주입한다.  
-* 이 가짜 프록시 객체는 실제 요청이 오면 그때 내부에서 실제 빈을 요청하는 위임 로직이 들어있다.   
-* 가짜 프록시 객체는 실제 request scope와는 관계가 없다.        
-  그냥 가짜이고, 내부에 단순한 위임 로직만 있고, **싱글톤 처럼 동작한다.(싱글톤이 아니라는 얘기기도하다.)**         
-     
-**특징 정리**    
-프록시 객체 덕분에 클라이언트는 마치 싱글톤 빈을 사용하듯이 편리하게 `request scope`를 사용할 수 있다.   
-사실 `Provider`를 사용하든, 프록시를 사용하든 핵심 아이디어는 **진짜 객체 조회를 꼭 필요한 시점까지 지연처리 한다는 점이다.**  
-단지, 애노테이션 설정 변경만으로 원본 객체를 프록시 객체로 대체할 수 있다.    
-이것이 바로 다형성과 DI 컨테이너가 가진 큰 강점이다.     
-꼭 웹 스코프가 아니어도 **프록시는 프록시 패턴을 통해 사용할 수 있다.**         
-               
-**주의점**         
-마치 **싱글톤을 사용하는 것 같지만 다르게 동작하기 때문에 결국 주의해서 사용해야 한다.**     
-이런 특별한 `scope`는 꼭 필요한 곳에만 최소화해서 사용하자, 무분별하게 사용하면 유지보수하기 어려워진다.     
-
-
-
-
-
-
-
-
-
-
-
-
